Readme update + requirements

--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -84,7 +84,7 @@
     "from transformers import AutoModelForSeq2SeqLM, DataCollatorForSeq2Seq, TrainingArguments, Trainer\n",
     "import torch\n",
     "\n",
-    "model_name = \"facebook/mbart-large-50\"  # Указано в вашем preprocess\n",
+    "model_name = \"facebook/mbart-large-50\"\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(model_name).to(torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\"))\n",
     "data_collator = DataCollatorForSeq2Seq(tokenizer, model=model)\n",
     "\n",
@@ -93,23 +93,22 @@
     "    num_train_epochs=2,\n",
     "    per_device_train_batch_size=16,\n",
     "    per_device_eval_batch_size=16,\n",
-    "    learning_rate=1e-4,  # Уменьшен для стабильности\n",
+    "    learning_rate=1e-4,\n",
     "    weight_decay=0.01,\n",
     "    logging_dir=\"./logs\",\n",
-    "    logging_steps=50,  # Увеличено для ускорения\n",
+    "    logging_steps=50,\n",
     "    save_steps=500,\n",
     "    save_total_limit=2,\n",
-    "    fp16=True,  # Поддержка GPU\n",
-    "    eval_steps=50  # Синхронизировано с logging_steps\n",
+    "    fp16=True,\n",
+    "    eval_steps=50\n",
     ")\n",
     "\n",
-    "# Trainer\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
     "    args=training_args,\n",
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=eval_dataset,\n",
-    "    processing_class=tokenizer,  # Исправлено предупреждение\n",
+    "    processing_class=tokenizer,\n",
     "    data_collator=data_collator\n",
     ")"
    ]
@@ -295,15 +294,12 @@
     "\n",
     "text = \"Нонадорогетыегоненайдешь\"\n",
     "\n",
-    "# Токенизация\n",
-    "inputs = tokenizer(text, return_tensors=\"pt\").to(device)  # переносим input_ids и attention_mask на GPU\n",
+    "inputs = tokenizer(text, return_tensors=\"pt\").to(device)\n",
     "\n",
     "model.to(device)\n",
     "\n",
-    "# Генерация\n",
     "output_ids = model.generate(**inputs, max_length=50)\n",
     "\n",
-    "# Декодируем\n",
     "print(tokenizer.decode(output_ids[0], skip_special_tokens=True))"
    ]
   },
