Added comments to train file

--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -65,6 +65,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc0e4edf",
+   "metadata": {},
+   "source": [
+    "### Токенизация и подготовка датасета\n",
+    "\n",
+    "1. **Загрузка токенизатора**  \n",
+    "   Используем токенизатор модели `facebook/mbart-large-50`.\n",
+    "\n",
+    "2. **Функция `preprocess`**  \n",
+    "   - Вход: примеры с текстом без пробелов (`text_no_spaces`) и восстановленным текстом (`text_restored`).  \n",
+    "   - Токенизирует входной и целевой текст с усечением до `max_length=32` и паддингом.  \n",
+    "   - Заменяет паддинг токены на `-100` в метках, чтобы лосс-функция их игнорировала.\n",
+    "\n",
+    "3. **Применение к датасету**  \n",
+    "   - `train_dataset.map(preprocess, batched=True)` — токенизация обучающего датасета.  \n",
+    "   - `eval_dataset.map(preprocess, batched=True)` — токенизация валидационного датасета.\n",
+    "\n",
+    "> В результате получаем токенизированный датасет, готовый для подачи в модель Seq2Seq.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "64e6e43b",
@@ -111,6 +133,36 @@
     "    processing_class=tokenizer,\n",
     "    data_collator=data_collator\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c59fa515",
+   "metadata": {},
+   "source": [
+    "### Настройка и обучение модели Seq2Seq\n",
+    "\n",
+    "1. **Загрузка модели**  \n",
+    "   Используется `facebook/mbart-large-50`. Модель сразу переводится на GPU (если доступен).\n",
+    "\n",
+    "2. **DataCollator**  \n",
+    "   - `DataCollatorForSeq2Seq` автоматически подготавливает батчи, выравнивая длины входов и меток.\n",
+    "\n",
+    "3. **TrainingArguments**  \n",
+    "   - `output_dir` — папка для чекпоинтов.  \n",
+    "   - `num_train_epochs` — количество эпох обучения.  \n",
+    "   - `per_device_train_batch_size`, `per_device_eval_batch_size` — размеры батчей.  \n",
+    "   - `learning_rate`, `weight_decay` — параметры оптимизации.  \n",
+    "   - `logging_dir`, `logging_steps` — логирование.  \n",
+    "   - `save_steps`, `save_total_limit` — сохранение чекпоинтов.  \n",
+    "   - `fp16=True` — использование смешанной точности (если есть поддержка GPU).  \n",
+    "   - `eval_steps` — частота оценки на валидации.\n",
+    "\n",
+    "4. **Trainer**  \n",
+    "   - Инкапсулирует весь процесс обучения: подачу батчей, вычисление лосса, оптимизацию, логирование и сохранение модели.  \n",
+    "   - `train_dataset` и `eval_dataset` — подготовленные токенизированные датасеты.  \n",
+    "   - `tokenizer` используется для обработки текстов.  \n",
+    "   - `data_collator` выравнивает батчи по длине.\n"
    ]
   },
   {
@@ -354,6 +406,14 @@
     "print(torch.version.cuda)          \n",
     "print(torch.cuda.is_available())   \n",
     "print(torch.cuda.get_device_name(0))  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50c981a6",
+   "metadata": {},
+   "source": [
+    "Выгрузка в HuggingFace"
    ]
   },
   {
